--- a/style.css
+++ b/style.css
@@ -73,3 +73,83 @@ h4{
 .leading{
   font-size: 1.1rem;
 }
+
+.grid{
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  gap: 10px;
+}
+
+.site-nav{
+  margin: 0 20px;
+}
+
+.site-nav ul {
+  display: none;
+}
+
+.site-nav h1{
+  grid-column: 1/4;
+}
+
+#welcome{
+  padding: 0 20px 20px 20px;
+}
+
+.welcome-text{
+  grid-column: 1/6;
+}
+
+.welcome-img{
+  grid-column: 6/9;
+  margin-top: 5px;
+}
+
+.welcome-img img{
+  width: 200%;
+}
+
+.welcome-text a {
+  margin: 20px 0;
+}
+
+#portfolio h3 {
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.projects a{
+  grid-column: 1/9;
+  margin: 20px 0;
+  display: flex;
+}
+
+.projects a img, .projects a h4{
+  margin: 0 20px;
+  min-width: 40%;
+  align-self: center;
+}
+
+#skills{
+  padding: 30px 20px;
+}
+
+#skills h3{
+  text-align: center;
+}
+
+#skills ul{
+  margin: 40px 0;
+}
+
+#skills li{
+  padding: 10px;
+  background: rgba(0,0,0,0.2);
+  grid-column: span 4;
+  text-align: center;
+}
+
+#skills img{
+  height: 80px;
+  margin: 10px auto;
+}
