--- a/style.css
+++ b/style.css
@@ -153,3 +153,51 @@ h4{
   height: 80px;
   margin: 10px auto;
 }
+
+#contact{
+  padding: 30px 20px;
+}
+
+#contact h3, #contact p{
+  margin-bottom: 0;
+  text-align: center;
+}
+
+#contact form{
+  width: 80%;
+  max-width: 400px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+#contact input,#contact textarea{
+  width: 100%;
+  margin: 10px 0;
+}
+
+#contact .button{
+  margin-top: 10px;
+}
+
+footer{
+  padding: 30px 20px;
+}
+
+footer .copyright{
+  grid-column: 1/4;
+  font-size: 0.8em;
+}
+
+footer .social{
+  grid-column: 7/9;
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer li{
+  margin: 0 6px;
+}
+
+footer img{
+  width: 40px;
+}
