--- a/style.css
+++ b/style.css
@@ -201,3 +201,71 @@ footer li{
 footer img{
   width: 40px;
 }
+
+/* laptop styles */
+@media screen and (min-width: 960px){
+  body{
+    font-size: 18px;
+  }
+  .welcome-img img{
+    width: 100%;
+  }
+  .grid{
+    max-width: 1060px;
+    margin: 0 auto;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  .leading{
+    margin: 20px 0;
+  }
+  .site-nav{
+    padding: 0 20px;
+  }
+  .site-nav h1{
+    grid-column: 1/3;
+  }
+  .site-nav ul{
+    display: flex;
+    grid-column: 6/9;
+    justify-content: flex-end;
+    align-self: center;
+  }
+  .site-nav li{
+    margin-left: 20px;
+  }
+  .welcome-text{
+    grid-column: 1/5;
+    align-self: center;
+  }
+  #welcome{
+    padding-bottom: 40px;
+  }
+  .projects{
+    margin-top: 40px;
+  }
+  .projects a{
+    grid-column: span 4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  .projects a:last-child{
+    grid-column: 3/7;
+  }
+  .projects h4{
+    text-align: center;
+  }
+}
+
+/* desktop styles */
+@media screen and (min-width: 1200px){
+  body{
+    font-size: 20px;
+  }
+  .grid{
+    max-width: 100%;
+  }
+}
